[package]
name = "armkeil-ram-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicorn-engine = "2.0.0-rc3"
clap = { version = "3.1", features = ["derive"] }
clap-num = "1"
anyhow = "1"
bytes = "1"
